test: Adapting Contract Test
Includes some refactorings and especially adapted tests for the
submission name length (now a data-driven test).